--- a/README.org
+++ b/README.org
@@ -13,4 +13,35 @@ related to the Screaming Channels on BLE project.
 - [[file:scripts/check_traces_archives.sh]] :: Check that archives (commited using
   =git-annex=) are consistent with current trace directories (ignored by
   =git=).
+- [[file:profiles/][profiles]] :: Contains some good [[id:71833b59-2215-482f-ba78-49a153b607ad][profiles]] for template attacks.
+- [[file:signals/][signals]] :: Contains some good [[id:108f8a72-7097-46ce-9457-191988296c92][signals]] for autocorrelation matching.
 
+* Contents
+
+** Profiles
+:PROPERTIES:
+:DIR:      profiles
+:ID:       71833b59-2215-482f-ba78-49a153b607ad
+:END:
+
+- [[attachment:231213_single-cable_raw/][231213_single-cable_raw]] :: Profile of 2 POIs constructed using a single
+  non-averaged AES with 44700 traces. It comes from the
+  =231213_single-cable_raw= dataset.
+- [[attachment:231222_single-cable-balanced_raw/][231222_single-cable-balanced_raw]] ::
+  - 2 POIs with 1 point spacing
+  - Single non-averaged AES
+  - 64k traces
+  - Balanced generator
+  - Coax cable
+  - Copied from the =231222_single-cable-balanced_raw= dataset
+
+** Signals
+:PROPERTIES:
+:DIR:      signals
+:ID:       108f8a72-7097-46ce-9457-191988296c92
+:END:
+
+- [[attachment:2.548GHz_30Msps_AES_BLE_clean_leak_single.npy][2.548GHz_30Msps_AES_BLE_clean_leak_single.npy]] :: Template of a single
+  (non-averaged) key scheduling with 2 first rounds of an AES executed during a
+  BLE transmission, collected at 2.548 GHz using 30 Msps, using an USRP
+  B200mini and an RF coax cable inside an anechoic box.
